hphp/hack/test/typecheck/sealed/sealed_class_with_trait.php
<?hh

trait MyTrait {}

<<__Sealed(MyTrait::class)>>
class MyClass {}
